# VulkanTemplate2D

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
base/: CMakeLists.txt  UIOverlay.cpp  VulkanApplication.cpp  VulkanApplication.h
base/compilers/: slang.cpp  slang.hpp
base/utilities/: AudioManager.cpp  AudioManager.h  FileWatcher.hpp  Threadpool.hpp
base/wrappers/: Buffer.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  Pipeline.hpp  Sampler.hpp  Texture.hpp
data/game/: monsters.json
data/shaders/: CMakeLists.txt  frame.slang  fullscreen.slang  postprocess.slang  sprite.frag.hlsl  sprite.slang  sprite.vert.hlsl  tilemap-naive.slang  tilemap.frag.hlsl  tilemap.slang  tilemap.vert.hlsl  ui.slang
data/shaders/base/: overlay.slang
game/: CMakeLists.txt  Game.cpp  Game.hpp  Run.cpp  Run.hpp  Tilemap.cpp  Tilemap.hpp
game/entities/: Entity.cpp  Entity.hpp  Monster.cpp  Monster.hpp  Number.cpp  Number.hpp  Pickup.cpp  Pickup.hpp  Player.cpp  Player.hpp  Projectile.cpp  Projectile.hpp  Weapon.cpp  Weapon.hpp
game/object_types/: Monsters.cpp  Monsters.hpp
src/: CMakeLists.txt  main.cpp
