SET(PROJECT_NAME "VulkanTemplate")
file(GLOB HEADERS "*.h" "*.hpp")
file(GLOB SOURCE "*.cpp" ${BASE_HEADERS} ${HEADERS})
if(WIN32)
	add_executable(${PROJECT_NAME} WIN32 ${MAIN_CPP} ${SOURCE})
	target_link_libraries(${PROJECT_NAME} base game ${Vulkan_LIBRARY} ${WINLIBS})
else(WIN32)
	add_executable(${PROJECT_NAME} ${MAIN_CPP} ${SOURCE})
	target_link_libraries(${PROJECT_NAME} base game)
endif(WIN32)
if(RESOURCE_INSTALL_DIR)
	install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR})
endif()